# solitaire-term

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
solitaire/: main.py
solitaire/assets/: card_art.py  win_art.py
solitaire/assets/art/: README.md
solitaire/assets/art/large/: 10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  ace.txt  ace_clubs.txt  ace_diamonds.txt  ace_hearts.txt  ace_spades.txt  default.txt  jack.txt  king.txt  queen.txt
solitaire/assets/art/medium/: 10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  ace.txt  ace_clubs.txt  ace_diamonds.txt  ace_hearts.txt  ace_spades.txt  default.txt  jack.txt  king.txt  queen.txt
solitaire/assets/art/small/: 10.txt  2.txt  3.txt  6.txt  7.txt  8.txt  9.txt  ace.txt  ace_clubs.txt  ace_diamonds.txt  ace_hearts.txt  ace_spades.txt  default.txt  jack.txt  king.txt  queen.txt
solitaire/assets/art/xlarge/: 10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  ace.txt  ace_clubs.txt  ace_diamonds.txt  ace_hearts.txt  ace_spades.txt  default.txt  jack.txt  king.txt  queen.txt
solitaire/assets/art/xxlarge/: 2.txt  ace_clubs.txt  ace_diamonds.txt  ace_hearts.txt  ace_spades.txt  default.txt  jack.txt  king.txt  queen.txt
solitaire/engine/: card.py  deck.py  game_logic.py  moves.py  state.py  test_engine.py
solitaire/ui/: app.py  piles.py  styles.tcss  widgets.py
