[project]
name = "solitaire-term"
version = "0.1.0"
description = "Klondike Solitaire in the terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.2.3",
]

[project.scripts]
solitaire = "solitaire.main:main"

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solitaire"]
